feat: apply koseki link events
